Revision history for Perl module Math::Prime::Util

0.74 ?

    [API Changes]

    - is_pseudoprime, is_euler_pseudoprime, and is_strong_pseudoprime will
      use an implicit base of 2 rather than a missing base error.  This also
      means is_pseudoprime($n, @bases) works properly.

    [ADDED]

    - powersum(n,k)                   sum of k-th powers of positive ints <= n
    - sumpowerful(n[,k])              sum of k-powerful numbers <= n
    - sumliouville(n)                 L(n), sum of liouville(1..n)
    - sumtotient(n)                   sum of euler_phi(1..n)
    - prime_bigomega(n)               # of factors (with multiplicity)
    - prime_omega(n)                  # of factors (distinct)
    - powint(a, b)                    signed integer a^b
    - mulint(a, b)                    signed integer a*b
    - addint(a, b)                    signed integer a+b
    - subint(a, b)                    signed integer a-b
    - add1int(n)                      signed integer n+1
    - sub1int(n)                      signed integer n-1
    - divint(a, b)                    signed integer a/b (floor)
    - modint(a, b)                    signed integer a%b (floor)
    - cdivint(a, b)                   signed integer a/b (ceiling)
    - divrem(a, b)                    Euclidean quotient and remainder
    - fdivrem(a, b)                   Floored quotient and remainder
    - cdivrem(a, b)                   Ceiling quotient and remainder
    - tdivrem(a, b)                   Truncated quotient and remainder
    - lshiftint(n, k)                 left shift n by k bits
    - rshiftint(n, k)                 right shift n by k bits (truncating)
    - rashiftint(n, k)                right shift n by k bits (flooring)
    - absint(n)                       integer absolute value
    - negint(n)                       integer negation
    - cmpint(a, b)                    integer comparison (like <=>)
    - signint(a, b)                   integer sign (-1,0,1)