@@ -56,7 +56,7 @@ static UV select_extra_strong_parameters(UV n, UV increment) {
 /* Fermat pseudoprime */
 int is_pseudoprime(UV const n, UV a)
 {
-  if (n < 4) return (n == 2 || n == 3);
+  if (n < 3) return (n == 2);
   if (!(n&1) && !(a&1)) return 0;
   if (a < 2) croak("Base %"UVuf" is invalid", a);
   if (a >= n) {
@@ -78,7 +78,7 @@ int is_pseudoprime(UV const n, UV a)
 /* Euler (aka Euler-Jacobi) pseudoprime:  a^((n-1)/2) = (a|n) mod n */
 int is_euler_pseudoprime(UV const n, UV a)
 {
-  if (n < 5) return (n == 2 || n == 3);
+  if (n < 3) return (n == 2);
   if (!(n&1)) return 0;
   if (a < 2) croak("Base %"UVuf" is invalid", a);
   if (a > 2) {
@@ -147,7 +147,7 @@ int is_euler_plumb_pseudoprime(UV const n)
 int miller_rabin(UV const n, const UV *bases, int nbases)
 {
 #if USE_MONTMATH
-  MPUassert(n > 3, "MR called with n <= 3");
+  MPUassert(n > 2, "MR called with n <= 2");
   if ((n & 1) == 0) return 0;
   {
     const uint64_t npi = mont_inverse(n),  mont1 = mont_get1(n);
@@ -158,12 +158,10 @@ int miller_rabin(UV const n, const UV *bases, int nbases)
     for (j = 0; j < nbases; j++) {
       a = bases[j];
       if (a < 2)  croak("Base %"UVuf" is invalid", (UV)a);
-      if (a >= n) {
-        a %= n;
-        if (a == 0 || (a == n-1 && a&1)) return 0;
-      }
+      if (a >= n)  a %= n;
+      if (a <= 1 || a == n-1) continue;   /* Return 1 if a = 0 mod n */
       ma = mont_geta(a,n);
-      if (a == 1 || a == n-1 || !ma) continue;
+      if (!ma) continue;
       md = mont_powmod(ma, u, n);
       if (md != mont1 && md != n-mont1) {
         for (i=1; i<t; i++) {
@@ -180,18 +178,15 @@ int miller_rabin(UV const n, const UV *bases, int nbases)
   UV d = n-1;
   int b, r, s = 0;
 
-  MPUassert(n > 3, "MR called with n <= 3");
+  MPUassert(n > 2, "MR called with n <= 2");
   if ((n & 1) == 0) return 0;
 
   while (!(d&1)) {  s++;  d >>= 1;  }
   for (b = 0; b < nbases; b++) {
     UV x, a = bases[b];
     if (a < 2)  croak("Base %"UVuf" is invalid", a);
-    if (a >= n) {
-      a %= n;
-      if (a == 0 || (a == n-1 && a&1)) return 0;
-    }
-    if (a == 1 || a == n-1) continue;
+    if (a >= n)  a %= n;
+    if (a <= 1 || a == n-1) continue;   /* Return 1 if a = 0 mod n */
     /* n is a strong pseudoprime to base a if either:
      *    a^d = 1 mod n
      *    a^(d2^r) = -1 mod n for some r: 0 <= r <= s-1
@@ -1040,7 +1035,7 @@ int lucas_lehmer(UV p)
 
 /* Hashing similar to Forišek and Jančina 2015, trial with 2/3/5/7. */
 static const uint16_t mr_bases_hash32[256] = {
-29783,551,1651,1050,26680,311,635,9038,4165,4483,678,2337,5737,47570,1364,556,6066,16981,18532,3132,4309,2727,11084,895,1178,378,1598,7287,3162,3209,5733,3111,29966,572,3502,4646,3313,1473,274,6008,1706,11135,19247,430,2057,6193,609,2101,817,4717,139,1088,979,1347,321,3413,7525,2085,12629,477,9139,905,1411,683,19112,1136,7470,791,10777,1459,171,1988,3415,4269,326,2452,12800,14790,1077,1952,1879,1826,8240,211,8181,2665,1719,233,1097,3704,1768,37882,2703,1750,7906,5745,1313,509,723,3367,2928,6497,12208,312,2475,25734,8840,842,7051,230,6031,342,293,827,486,2683,331,2620,474,6707,3486,3780,1090,1132,9556,13156,14701,83,4689,71,18259,4422,5107,740,1778,542,2689,27289,488,7988,4343,6227,1266,1750,57,1836,2443,2759,4377,2404,2605,3084,194,10699,9557,13655,7045,2365,2495,13527,11969,1420,9144,296,37747,8627,2193,4511,270,5373,2248,1422,4838,131,4362,12629,2891,7770,20841,67,238,1464,1748,4152,6674,94,5067,13594,951,2378,1026,13625,380,4037,7245,1217,2244,11503,2076,667,3997,1889,2871,8201,11184,912,1460,2204,3730,103,7516,19769,971,2405,1077,3228,2082,846,4803,872,22946,101,1490,1223,8985,334,83,5587,280,18791,2067,10136,279,15162,7602,13298,4227,346,30,3472,2374,651,1948,304,5397,235,4086,2719,10042,145,572,1328,2204,4125,1762,5304
+29783,551,1651,1050,26680,311,635,9038,4165,4483,678,2337,5737,47570,1364,556,6066,16981,18532,3132,4309,2727,11084,895,1178,378,1598,7287,3162,3209,5733,3111,29966,572,3502,4646,3313,1473,274,6008,1706,12088,19247,430,2057,6193,609,2101,817,4717,139,1088,979,1347,321,3413,7525,2085,12629,477,9139,905,1411,683,19112,1136,7470,791,10777,1459,171,1988,3415,4269,326,2452,12800,14790,1077,1952,1879,1826,8240,211,8181,2665,1719,233,1097,3704,1768,37882,2703,1750,7906,5745,1313,509,723,3367,2928,6497,12208,312,2475,25734,8840,842,7051,230,6031,342,293,827,486,2683,331,2620,474,6707,3486,3780,1090,1132,9556,13156,14701,83,4689,71,18259,4422,5107,740,1778,542,2689,27289,488,7988,4343,6227,1266,1750,57,1836,2443,2759,4377,2404,2605,3084,194,10699,9557,13655,7045,2365,2495,13527,11969,1420,9144,296,37747,8627,2193,4511,270,5373,2248,1422,4838,131,4362,12629,2891,7770,20841,67,238,1464,1748,4152,6674,94,5067,13594,951,2378,1026,13625,380,4037,7245,1217,2244,11503,2076,667,3997,1889,2871,8201,11184,912,1460,2204,3730,103,7516,19769,971,2405,1077,3228,2082,846,4803,872,22946,101,1490,1223,8985,334,83,5587,280,18791,2067,10136,279,15162,7602,13298,4227,346,30,3472,2374,651,1948,304,5397,235,4086,2719,10042,145,572,1328,2204,4125,1762,5304
 };
 
 /* 1) This will be always correct for any 32-bit input.
@@ -1089,7 +1084,7 @@ int is_prob_prime(UV n)
         !(x%41) || !(x%43) || !(x%47) || !(x%53))   return 0;
     if (x < 3481) /* 59*59 */                       return 2;
     /* Trial division crossover point depends on platform */
-    if (!USE_MONTMATH && n < 200000) {
+    if (!USE_MONTMATH && n < 500000) {
       uint32_t f = 59;
       uint32_t limit = isqrt(n);
       while (f <= limit) {
